--- a/REAlistGUIGenerator/src/main/webapp/REAlistGUIGenerator.css
+++ b/REAlistGUIGenerator/src/main/webapp/REAlistGUIGenerator.css
@@ -147,6 +147,13 @@ body {
   margin-top: 6px;
 }
 
+/* Label for selecting dualitystatus and adding dulaitytype to REA DB */
+.dualityAdd {
+  margin-bottom: 6px;
+  font-size:120%;
+  margin-top: 6px;
+}
+
 /*********************************/
 /*       EventContentPanel	     */
 /*********************************/
